<resources>
    <string name="app_name" translatable="false">TheNewsApp</string>
    <string name="headlines_nav_title">Headlines</string>
    <string name="favorites_nav_title">Favorites</string>
    <string name="search_nav_title">Search</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="favorites_button_description">Favorite button</string>
    <string name="error_text_internet">No Internet</string>
    <string name="error_text_retry">Retry</string>
    <string name="search_news_edit_text">Search news...</string>
    <string name="article_image_description">Article image</string>
    <string name="article_card_source">SOURCE</string>
    <string name="article_card_title">TITLE</string>
    <string name="article_card_description">DESCRIPTION</string>
    <string name="article_card_date_time">DATE TIME</string>
</resources>
